--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ body{
 html,body{
     overflow-x: hidden;
 }
+.pinkText{
+    color: #E9DED9 !important;
+}
 
 .loading--flower {
     width: 100px;
@@ -87,6 +90,7 @@ html,body{
     position: fixed;
     top: 0;
     left: 0;
+    box-shadow:inset 0 0 0 2000px rgba(107, 135, 143, 0.48);
 }
 .homeBtn{
     width: 80%;
@@ -94,9 +98,10 @@ html,body{
     line-height: 36px;
 }
 .landing--nps_div {
-    width: 290px;
+    width: 250px;
     margin: 0 auto;
     margin-top: 24px;
+    margin-bottom: 60px;
 }
 .landing--NPS_logo{
     display: inline;
@@ -110,19 +115,21 @@ html,body{
     font-size: 20px;
     font-weight: bold;
     line-height: 25px;
-    color: #3B4549;
+    color: #E9DED9;
     text-align: center;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 4px !important;
 }
 .landing--sub-title {
-    color: #3B4549;
+    color: #E9DED9;
     font-size: 20px;
     font-weight: bold;
     line-height: 25px;
     text-align: center;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 4px !important;
 }
 
 .button {
