--- a/style.css
+++ b/style.css
@@ -309,6 +309,9 @@ h2{
     width: 170px;
     height: 170px;
 }
+.search{
+    vertical-align: middle;
+}
 .text-block{
     text-align: center;
     background-color: rgba(59, 69, 73, 0.8);
