--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ html,body{
 }
 .sortBy{
     /* font-family: Baskerville; */
-    font-size: 16px;
+    font-size: 14px;
     height: 18px;
     color: #3B4549;
 }
@@ -200,6 +200,9 @@ html,body{
 }
 .v-toolbar__content, .v-toolbar__extension {
     padding: 0px;
+}
+.v-toolbar__content{
+    text-align: center !important;
 }
 #researchH1{
     font-size: 20px;
@@ -292,7 +295,7 @@ h2{
     height: 30px;
     line-height: 30px;
     margin-top: 10px;
-    margin-bottom: 14vw;
+    margin-bottom: 30px;
 }
 .picWrapper{
     display: grid;
@@ -316,13 +319,45 @@ h2{
     text-align: center;
     background-color: rgba(59, 69, 73, 0.8);
     position: relative;
-    bottom: 35px;
-    width: 100%;
-    height: 8vw;
-    line-height: 8vw;
+    top: -35px;
+    width: 170px;
+    height: 30px;
+    line-height: 30px;
     color: #E9DED9;
-    font-size: 4vw;
+    font-size: 14px;
     overflow: hidden;
+}@media only screen and (max-width: 350px){
+    .pic{
+        width: 140px;
+        height: 140px;
+    }
+    .text-block{
+        width: 140px;
+    }
+    .sortBy_tabs {
+        padding: 4px;
+        font-size: 12px;
+    }
+}
+@media only screen and (min-width: 580px){
+    .picWrapper{
+        grid-template-columns: auto auto auto;
+    }
+}
+@media only screen and (min-width: 900px){
+    .picWrapper{
+        grid-template-columns: auto auto auto auto;
+    }
+}
+@media only screen and (min-width: 1100px){
+    .picWrapper{
+        grid-template-columns: auto auto auto auto auto;
+    }
+}
+@media only screen and (min-width: 1300px){
+    .picWrapper{
+        grid-template-columns: auto auto auto auto auto auto;
+    }
 }
 .container {
     position: relative;
@@ -469,10 +504,10 @@ h2{
     height: auto;
     width: 100%;
 }
-.slidesContainer{
+.slidesContainer, .slidesContainer2{
     display: none;
 }
-.dot {
+.dot, .dot2 {
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -482,7 +517,7 @@ h2{
     display: inline-block;
     transition: background-color 0.6s ease;
 }  
-.active, .dot:hover {
+.active, .dot:hover ,.dot2:hover {
     background-color: #717171;
 }
 .fade {
